--- a/eukcc/README.rmd
+++ b/eukcc/README.rmd
@@ -1,7 +1,7 @@
 The Docker uses conda. The docker will use a bash shell
 
 Due to licensing issues, GeneMark needs to be installe separately from within the Docker.
-You need to download GeneMark-ES from http://exon.gatech.edu/GeneMark/license_download.cgi and deposit the license key in your home directory (.e. the /root diectory inside the docker) as .gm_key.
+You need to download GeneMark-ES from http://exon.gatech.edu/GeneMark/license_download.cgi and deposit the license key in your home directory (.e. the /root directory inside the docker) as .gm_key.
 
 You need to add gmes_petap.pl your $PATH:
 
